# 09-Web-HW

./: README.md  authors.json  json_check.py  json_check2.py  main.py  pyproject.toml  quotes.json
