[tool.poetry]
name = "09-web-hw Scraper and parser"
version = "0.1.0"
description = "scrape quotes and author information from the website https://quotes.toscrape.com"
authors = ["OleksiyM <OleksiyM@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
